--- a/public/style/all.css
+++ b/public/style/all.css
@@ -4,3 +4,5 @@
 @import url('pages/index.css');
 @import url('components/header.css');
 @import url('components/form.css');
+@import url('pages/profile.css');
+@import url('pages/admin.css');
