--- a/public/style/components/form.css
+++ b/public/style/components/form.css
@@ -46,5 +46,11 @@
     font-weight: 600;
     border-radius: 7px;
     cursor: pointer;
+}
 
+.fieldset select {
+    padding: 15px 20px;
+    border: 1px solid rgba(31,31,31,.1);
+    border-radius: 7px;
+    font-size: 16px;
 }
