--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,11 @@
         <div class="main">
             <div class="categories">
                 <h3>Жанры</h3>
+                <% genres.forEach(genre => {
+                %>
+                    <a href="/<%=genre.key%>"><%=genre.name%></a>
+                <%
+                })%>
                 <a href="">Драма</a>
                 <a href="">Комедии</a>
                 <a href="">Ужасы</a>
