--- a/views/newFilm.ejs
+++ b/views/newFilm.ejs
@@ -40,8 +40,13 @@
                 <fieldset class="fieldset">
                     <label for="">Выберите жанр</label>
                     <select name="genre" id="">
-                        <option value="">Драма</option>
-                        <option value="">Комедия</option>
+                        <%
+                            genres.forEach(genre => {
+                        %>
+                                <option value=""><%=genre.name%></option>
+                        <%        
+                            })
+                        %>
                     </select>
                 </fieldset>
                 <fieldset class="fieldset">
