feat(Sign up) User Schema created and user registration added

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
     <%- include('partials/header.ejs') %>    
     <div class="container">
         <div class="main">
-            <form action="" class="form">
+            <form action="/api/signup" method="POST" class="form">
                 <h3>Регистрация</h3>
                 <fieldset class="fieldset">
                     <label for="">E-mail</label>
@@ -23,8 +23,8 @@
                     <input type="password" placeholder="Введите пароль" name="password">
                 </fieldset>
                 <fieldset class="fieldset">
-                    <label for="">Подтаерлите пароль</label>
-                    <input type="password" placeholder="Подтаерлите пароль" name="re-password">
+                    <label for="">Подтвердите пароль</label>
+                    <input type="password" placeholder="Подтвердите пароль" name="re_password">
                 </fieldset>
                 <fieldset class="fieldset">
                     <button type="submit">Зарегистрироваться</button>
