--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,10 +21,10 @@
                         <img src="/images/profile-img.png" alt="avatar">
                     </div>
                     <div class="profile-info">
-                        <p><span>Полное имя: </span>Сергей Викторович</p>
-                        <p><span>E-mail: </span>sergei@gmail.com</p>
-                        <button class="edit-btn">Редактировать профиль</button>
-                        <button class="logout-btn">Выход</button>
+                        <p><span>Полное имя: </span><%=user.full_name%></p>
+                        <p><span>E-mail: </span><%=user.email%></p>
+                        <a class="edit-btn">Редактировать профиль</a>
+                        <a href="/api/signout" class="logout-btn">Выход</a>
                     </div>
                 </div>
                 <h3>Сохраненные фильмы</h3>
