--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,10 +21,12 @@
         </div>
     </div>
     <div class="head-buttons">
-        <%if(user._id) {%>
+        <%if(user._id && user.isAdmin) {%>
+            <a href="/admin/<%=user._id%>">Профиль</a>    
+        <%} else if(user._id && !user.isAdmin) { %>  
             <a href="/profile/<%=user._id%>">Профиль</a>    
-        <%} else { %>
-            <a href="/login">Войти</a>    
+        <%} else {%>
+            <a href="/login">Войти</a>  
         <%}%>
     </div>
 </header>
