--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,34 +21,36 @@
             </div>
             <div class="main-content">
                 <h3>Фильмы и сериалы</h3>
-                <div class="main-card">
-                    <div class="card-left">
-                        <div class="film-img">
-                            <img src="/images/films/film1.webp" alt="">
+                <%films.forEach(item => {%>
+                    <div class="main-card">
+                        <div class="card-left">
+                            <div class="film-img">
+                                <img src="<%=item.image%>" alt="">
+                            </div>
+                            <div class="film-info">
+                                <a href=""><%=item.titleRus%></a>
+                                <a href=""><%=item.titleEng%>, <%=item.year%>, <%=item.time%> мин.</a>
+                                <a href=""><%=item.country.name%>, <%=item.genre.name%></a>
+                                <button class="film-btn">
+                                    <img src="/images/icons/play.svg" alt="">
+                                    Смотреть
+                                </button>
+                            </div>
                         </div>
-                        <div class="film-info">
-                            <a href="">Все везде и сразу</a>
-                            <a href="">Everything Everywhere, 2021, 139 мин.</a>
-                            <a href="">США, Фантастика</a>
-                            <button class="film-btn">
-                                <img src="/images/icons/play.svg" alt="">
-                                Смотреть
+                        <div class="card-right">
+                            <div class="film-rate">
+                                <p>7.3</p>
+                            </div>
+                            <button class="film-btn" onclick="saveToWatch('<%=item._id%>')">
+                                <img src="/images/icons/save.svg" alt="">
+                                Буду смотреть
                             </button>
                         </div>
                     </div>
-                    <div class="card-right">
-                        <div class="film-rate">
-                            <p>7.3</p>
-                        </div>
-                        <button class="film-btn">
-                            <img src="/images/icons/save.svg" alt="">
-                            Буду смотреть
-                        </button>
-                    </div>
-                </div>
+                <%})%>
             </div>
         </div>
     </div>
-    
+    <%- include('partials/scripts.ejs')%>
 </body>
 </html>
